Adjusted an issue with adding decision to the history before evaluating both of them and also the function get_last_n_moves was wrong I was getting the last moves from end to beginning and is from beginning to end